# natural_slice

./: Cargo.toml  readme.md
src/: lib.rs  permutation.rs  position.rs  property.rs
