[package]
name = "rubiks_coordinates"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = "0.2.0"
rand = "0.7.3"
radix_fmt = "1.0.0"
